# openGL-cmake

./: CMakeLists.txt
src/: main.cpp
